# HomeworkGitShare

./: .gitignore  CMakeLists.general  README.md
001/: CMakeLists.txt
001/031_1/: .QuadraticSolver.cpp.swp  .main.cpp.swp  QuadraticSolver.cpp  QuadraticSolver.hpp  main.cpp
001/031_2/: main.cpp
002/: CMakeLists.txt
002/069_4_cuberoot/: main.cpp
AlgorithmDesign/20130917/LongestCommonString/: Readme.mkd
AlgorithmDesign/labcode/: 20130924BoardCoverProblem.cpp
AlgorithmDesign/labcode/055/: 055MatrixMul.c  055MatrixMul_test.cpp  055rand.cpp  cc  ccr  cxx  cxxr  rand  test.in
AlgorithmDesign/labcode/056/: 056HAO  056HAO.cpp  056LongestCommonString.c  056adam  056adamd  056other.cpp  056rand.cpp  rand  t.in  test.in
AlgorithmDesign/labcode/057HASPROBLEM/: 057SilverCoinWeight.cpp
AlgorithmDesign/labcode/058/: 058HAO  058HAO.cpp  058adam  huffman.cpp  rand  rand.cpp  test.in
AlgorithmDesign/labcode/059/: 059dijkstra.cpp  test.in
AlgorithmDesign/labcode/060/: 060dijkstra.cpp
Assembly/: asm.7z
Assembly/8086/: 1.asm  2.asm  binarySearch - V1.asm  binarySearch.asm  binaryToHex.asm  deleteOneNumInArray.asm  exchangeAX.asm  gomoku.asm  hello.asm  inputOutput.asm  inputStringInSmallWindows.asm  inputWindows.asm  printNum.asm  selectNumbersAndCharacters - V1.asm  selectNumbersAndCharacters.asm  stackUsage.asm  strstr.asm  sumOfTenNum.asm  test_1s_in_AX.asm  twoSum.asm
Assembly/8086/InputWindows/: OpenWnd.asm  inputWindows.asm
Assembly/8086/Report/: binarySearch.asm  inputWindows-report.asm  strstr.asm
Assembly/adamcavendish/: Makefile  bsearch32.S  insertion_sort32.S  linux_sys.S  linux_sys32.S  macro32.S  utility32.S
Assembly/temp/: Makefile  test.cpp  test.s  test64.s
Assembly/x64/: Makefile  main.c  main.s
Assembly/x86/: 001HelloWorld.s  002mov.s  003split.s  004find-v2.s  004find.s  005testInsertionSort.cpp  Makefile  test.s
C++ProgrammingLanguage/01week/: 01swap.cpp  02IO01.cpp  03IO02.cpp  04P169.cpp  05palindrome.cpp
C++ProgrammingLanguage/rvalue-reference/: 001temporary_objects.cpp  002reference.cpp  003lvalue-rvalue_test.cpp  005MoveConstructor.cpp  006testClass.cpp
CompilerPrinciple/: README.md
CompilerPrinciple/001/: CMakeLists.txt
CompilerPrinciple/001/include/: token.hpp
CompilerPrinciple/001/include/lexer/: Lexer.hpp  PrimaryHandler.hpp  WordMap.hpp  all.hpp  easytypes.hpp
CompilerPrinciple/001/src/: lexermain.cpp
CompilerPrinciple/001/src/lexer/: Lexer.cpp  WordMap.cpp
CompilerPrinciple/001/test/: test01.pl0
ComputerArch/Lab02OpenMP/: Mandelbrot.cpp
ComputerGraphics/: CMakeLists.txt  Readme.mkd
ComputerGraphics/000FirstWindow/: main.cpp
ComputerGraphics/001Triangle/: CMakeLists.txt  fshader.glsl  main.cpp
ComputerGraphics/002Sierpinski2D/: CMakeLists.txt  fshader.glsl  main.cpp
ComputerGraphics/Common/: CMakeLists.txt
ComputerGraphics/SchoolHomework/: CMakeLists.txt
ComputerGraphics/SchoolHomework/HW01DrawLine/: HW01DrawLine.cpp  HW01DrawLine.hpp  HW01DrawLine_vshader.glsl
ComputerGraphics/SchoolHomework/drawLine/: drawLine-NSConflict-Adam.cpp  drawLine-NSConflict403-Adam.cpp  drawLine-NSConflict8223-Adam.cpp  drawLine.cpp
ComputerGraphics/School_RawOpenGL/: Readme.mkd
ComputerGraphics/School_RawOpenGL/000FirstWindow/: CMakeLists.txt
ComputerGraphics/School_RawOpenGL/002Sierpinski2D/: CMakeLists.txt
ComputerGraphics/School_RawOpenGL/Common/: Font.cpp  Font.hpp  Font_fshader.glsl  Font_vshader.glsl  shaders.cpp  shaders.hpp
ComputerGraphics/School_RawOpenGL/SchoolHomework/: main.cpp
ComputerGraphics/School_RawOpenGL/SchoolHomework/drawLine/: drawLine-NSConflict7412-Adam.cpp  drawLine.cpp  drawLine.hpp
ComputerGraphics/School_RawOpenGL/templates/: main.cpp.tpl
ComputerGraphics/School_RawOpenGL/test/: main.cpp  vshader.glsl
DataStructures/AVLTree/: AVLTree.workspace  Makefile
DataStructures/Array-this_is_terrible_never_include_it/: Array  Array.hpp  Array.tcc  test.cpp
DataStructures/DisjointSets/: DisjointSets  DisjointSets.hpp
DataStructures/List/: List  test.cpp
DataStructures/WordCounter/: main.cpp
DataStructures/XORLinkedList/: xorlist.hpp
DataStructures/kmp/: display.cpp  kmp  test.cpp
DataStructures/queue/: queue  test.cpp
DataStructures/regex/: main.cpp  regex.hpp
DataStructures/slist/: test.cpp
DataStructures/stack/: stack
DataStructures/stkque/: stkque  test.cpp
NumericalMethods/: CMakeLists.general
NumericalMethods/001/: CMakeLists.txt
NumericalMethods/001/031_1/: QuadraticSolver.hpp
NumericalMethods/003/: CMakeLists.txt
NumericalMethods/matlabstuffs/: P109_2.m  P171_2.m  P270_1.m  P69_4.m  backsub.m  cube_root.m  horner_integral.m  integrate_simpson_adapt.m  lagran.m  simpson_improve.m  temp.m  uptrbk.m  uptrbk_aug.m
OperatingSystem/labcode/Fairy/: CMakeLists.txt
OperatingSystem/labcode/Fairy/include/: config.hpp
OperatingSystem/labcode/Fairy/include/hardware/: Register.hpp
OperatingSystem/labcode/Fairy/include/kernel/: Kernel.hpp
OperatingSystem/labcode/Fairy/src/kernel/: Kernel.cpp  main.cpp
OperatingSystem/labcode/winter01/process_management/: CMakeLists.txt  all.hpp  main.cpp
OperatingSystem/labcode/winter01/process_management/algorithm/: algobase.hpp  fb_algo.cpp  fb_algo.hpp  priority_algo.hpp  roundrobin_algo.hpp
OperatingSystem/labcode/winter01/process_management/pcb/: STATE.hpp  pcb_base.hpp  pcb_fb.hpp  pcb_priority.hpp  pcb_roundrobin.hpp
OperatingSystem/labcode/winter03/version1/: CMakeLists.txt
PatternRecognition/Labreport/: .11122057Yangyang.mkd.swo  11122057Yangyang.md  11122057Yangyang.mkd
SoftwareEngineering/labreport/: 11122057Yangyang02.7z  11122057Yangyang03.7z  11122057Yangyang10.7z
WebDesign/: README.mkd
WebDesign/HW-01/: index.html
WebDesign/HW-02/: README.mkd  index.html
cmake/: usr_config.cmake
include/: numerical.hpp
include/cube_root/: cube_root.hpp  cube_root.tcc
include/deriv/: deriv.hpp  test.test
include/matrix/: matrix.hpp
matlabstuffs/: P109_2.m  P130_4.m  P178_1.m  P260_14.m  P307_1.m  P69_4.m  diff_poly_new.m  diffnew.m  gauss_seidel.m  linear_solve.m  newpoly.m
(+517 files in other folders)
