cmake_minimum_required(VERSION 3.0)
# PROJECT
project(000FirstWindow)
message(STATUS "Project: " ${PROJECT_NAME})

set(TARGET_NAME ${PROJECT_NAME})
SET(PROJECT_SOURCE "main.cpp")

ADD_EXECUTABLE(${TARGET_NAME} ${PROJECT_SOURCE})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${ALL_LIBS})

# INSTALL(FILES ./fshader21.glsl DESTINATION ${CMAKE_BINARY_DIR})
# INSTALL(FILES ./vshader21.glsl DESTINATION ${CMAKE_BINARY_DIR})

